# lc-data-structures-and-algorithms

./: AGENTS.md  CLAUDE.md  README.md  leetcode_template_config.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
diagrams/: diagram1.excalidraw  diagram2.excalidraw  distribution center.excalidraw
problems/arrays_and_strings/: problem_1044.py  problem_1071.py  problem_1208.py  problem_1413.py  problem_1431.py  problem_1456.py  problem_151.py  problem_1732.py  problem_2000.py  problem_209.py  problem_2090.py  problem_2270.py  problem_238.py  problem_2540.py  problem_2598.py  problem_283.py  problem_303.py  problem_345.py  problem_557.py  problem_605.py  problem_643.py  problem_724.py  problem_917.py  problem_977.py  problem_examples.py
problems/backtracking/: problem_17.py  problem_216.py  problem_39.py  problem_46.py  problem_52.py  problem_77.py  problem_78.py  problem_79.py  problem_797.py  problem_967.py
problems/binary_search/: problem_0875.py  problem_1231.py  problem_1283.py  problem_1631.py  problem_1870.py  problem_2300.py  problem_2389.py  problem_35.py  problem_410.py  problem_74.py  problem_875.py
problems/dynamic_programming/: problem_1143.py  problem_198.py  problem_2140.py  problem_300.py  problem_322.py  problem_70.py  problem_746.py
problems/experiments/: test_001.py
problems/general/: problem_1768.py  problem_392.py
problems/greedy/: problem_1196.py  problem_1323.py  problem_1338.py  problem_1710.py  problem_1833.py  problem_2294.py  problem_502.py  problem_881.py
tests/: problem_0039.py
(+154 files in other folders)
